SVY-16013 make sure bts-extra-switch won't overflow in css-positioning

--- a/com.servoy.eclipse.ngclient.ui/node/src/bootstrapextracomponents/svy_bootstrapextracomponents.css
+++ b/com.servoy.eclipse.ngclient.ui/node/src/bootstrapextracomponents/svy_bootstrapextracomponents.css
@@ -68,3 +68,8 @@
 .bts-extra-progressbar > .progress-bar {
     line-height: 20px;
 }
+
+.svy-wrapper > * > .bts-extra-switch {
+    width: 100%;
+    overflow: hidden;
+}
